# haskell-learning

./: README.md
Data Structures & Algorithms/: Deque.hs  Queue.hs
Euler/: P1MultiplesOf3And5.hs  P2EvenFibonacciNumbers.hs  P3LargestPrimeFactor.hs  P4LargestPalindromeProduct.hs  P5SmallestMultiple.hs  P6SumSquareDifference.hs  P710001stPrime.hs  P8LargestProductInASeries.hs
Haskell Programming (from first principles)/Chapter 1 - All You Need is Lambda/: ChapterExercises.md  EquivalanceExercises.md 
Haskell Programming (from first principles)/Chapter 2 - Hello, Haskell/: ComprehensionCheck.hs  HealTheSick.hs  ParenthesesAndAssociation.md  test.hs
Programming in Haskell/: README.md
Programming in Haskell/1. Introduction/: Exercises.hs
Programming in Haskell/2. First steps/: Exercises.hs
Programming in Haskell/3. Types and classes/: Exercises.hs
Programming in Haskell/4. Defining functions/: Exercises.hs
Programming in Haskell/5. List comprehensions/: Exercises.hs
Programming in Haskell/6. Recursive functions/: Exercises.hs
Programming in Haskell/7. Higher-order functions/: BinaryStringTransmitter.hs  Exercises.hs
Programming in Haskell/8. Declaring types and classes/: AbstractMachine.hs  Exercises.hs  TautologyChecker.hs
Programming in Haskell/9. The countdown problem/: Countdown.hs
Projects/hangman/: hangman.cabal  stack.yaml
Projects/hangman/src/: Hangman.hs  Main.hs  UI.hs
kata/: README.md  package.yaml  stack.yaml
kata/src/Aoc/: D01a.hs  D01b.hs  D02a.hs  D02b.hs
kata/src/Kyu4/: StringsMix.hs
kata/src/Kyu5/: PlayingWithLaziness.hs  (+3 more)
(+51 files in other folders)
