name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mark-gerarts/haskell-learning
author:              Mark Gerarts
maintainer:          mark.gerarts@gmail.com
category:            Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , config-ini
                     , data-clist
                     , text-zipper
                     , word-wrap
                     , random
